# Auto-NovelAI-Refactor

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt  run.bat  update.bat
.github/workflows/: update_dependencies.yml
assets/: plugins.json
src/: director_tools.py  generate_images.py  text2image.py  upscale_images.py
utils/: __init__.py  components.py  environment.py  generator.py  image_tools.py  logger.py  prepare.py  setting_updater.py  variable.py
utils/models/: __init__.py  director.py  headers.py  nai_diffusion_3.py  nai_diffusion_4_5_curated.py  nai_diffusion_4_5_full.py  nai_diffusion_4_curated_preview.py  nai_diffusion_4_full.py  nai_diffusion_furry_3.py
wildcards/动作/: POV反向乘骑（反）.txt  POV口交射精（正）.txt  POV口交（正）.txt  POV女上体位（正）.txt  POV正常（正）.txt  POV狗爬式（反）.txt  POV足交（正）.txt  POV靠墙站立（反）.txt  POV面对面站立性交（正）.txt  pov摇乳跨骑.txt  pov跨骑抓胸.txt  一脸嫌弃的给你看胖次.txt  丁丁包围网全身版.txt  丁丁包围网（半身版）.txt  乳交.txt  乳交舔阴.txt  亮枪.txt  亲吻牛子.txt  侧卧.txt  侧面KISS（正）.txt  侧面乳交.txt  侧面口交（侧）.txt  侧面狗爬抓手（侧）.txt  侧面舔阴茎（侧）.txt  催眠女上位.txt  儒教.txt  儒教与口.txt  卓下口交.txt  单手抓胸.txt  单腿站姿做.txt  单腿站立后入（正）.txt  南颜自慰.txt  双人儒教.txt  双人手交.txt  双人舔吊.txt  双手工作.txt  双手抓胸.txt  双脚离地鸿儒.txt  反向乘骑（正）.txt  反向摩擦阴茎（反）.txt  (+110 more)
wildcards/场景/: 万圣节.txt  乡村码头.txt  公交车站.txt  公园.txt  列车内部.txt  厕所隔间.txt  合室晚上.txt  吵闹的雨夜.txt  商场试衣间.txt  回乡小路.txt  城堡.txt  太空站.txt  床上.txt  摩天轮内部.txt  教堂.txt  教室.txt  树屋.txt  森林中.txt  水族馆.txt  洞穴.txt  浴场换衣间.txt  海边.txt  温室.txt  温暖冬夜.txt  温泉.txt  游泳池.txt  湖边.txt  监狱.txt  神社.txt  简单背景.txt  草原.txt  草原牧场.txt  荒废列车.txt  街道一角.txt  飞机场.txt  魔法图书馆.txt  鸡舍.txt
wildcards/表情/: 单闭眼咬紧牙关.txt  咬嘴唇.txt  咬紧牙关.txt  嘟嘴.txt  嘴唇微张.txt  张嘴.txt  张嘴笑.txt  波浪张嘴.txt  波浪闭嘴.txt  流泪爱心眼.txt  闭嘴笑.txt  闭眼张嘴.txt  闭眼闭嘴.txt  高潮吐舌.txt  高潮张嘴.txt
wildcards/角色/: Asuna-(Blue-Archive).txt  GawrGura.txt  Hanako-(Blue-Archive).txt  Hina-(Blue-Archive).txt  Karin-(Blue-Archive).txt  Mari-(Blue-Archive).txt  Prinz_Eugen_(Azur_Lane).txt  Toki-(Blue-Archive).txt  Toki_(Bunny)-(Blue-Archive).txt  Ui-(Blue-Archive).txt  z46.txt  ミソギ.txt  ミミ.txt  七七.txt  三月七.txt  伊丽莎白女王.txt  伊吹.txt  优菈.txt  优香.txt  信浓.txt  光辉.txt  凌波.txt  凝光.txt  初音未来.txt  刻晴.txt  加贺.txt  卡芙卡.txt  可畏.txt  可莉.txt  和纱.txt  埃尔德里奇.txt  塔什干.txt  多莉.txt  夜兰.txt  夜夜.txt  天狼星.txt  妃咲.txt  妮露.txt  姬坂乃爱.txt  姬子.txt  (+60 more)
wildcards/负面/: 去除小人.txt  新默认负面提示词.txt  长负面提示词.txt  默认负面提示词.txt
wildcards/质量/: 常用质量词.txt  简单质量词.txt  默认质量词.txt
