[project]
name = "auto-novelai-refactor"
version = "1.2.0"
description = "Semi-Auto-NovelAI-to-Pixiv 项目的重构版本"
authors = [
    {name = "zhulinyv",email = "zhulinyv2005@outlook.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10,<4.0"


[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html
[tool.black]
line-length = 120

# https://beta.ruff.rs/docs/settings/
[tool.ruff]
line-length = 120
# https://beta.ruff.rs/docs/rules/
lint.select = ["E", "W", "F"]
lint.ignore = ["E501"]
# Exclude a variety of commonly ignored directories.
respect-gitignore = true

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
